--- a/asset/css/festival/adminstyle.css
+++ b/asset/css/festival/adminstyle.css
@@ -6,6 +6,10 @@
 	background:#c00000;
 }
 
+.topic .admin-message-tools {
+	border-color: #e3c629;
+}
+
 .auditting-message .title,
 .auditting-message .title a,
 .auditting-message .words {
