update background image of lightgreen theme

--- a/asset/css/lightgreen/style.css
+++ b/asset/css/lightgreen/style.css
@@ -1,5 +1,5 @@
 body {
-	background: #f5fff7 url(../../image/bg_green.jpg);
+	background: #f5fff7 url(../../image/bg_lightgreen.gif);
 }
 
 textarea, input, select {
