--- a/asset/css/black/adminstyle.css
+++ b/asset/css/black/adminstyle.css
@@ -11,6 +11,14 @@
 	border-color: #333;
 }
 
+.topic .admin-message-tools a.tool:hover {
+	background:#333;
+}
+
+.topic .admin-message-tools .tool-status {
+	background:#383838;
+}
+
 .auditting-message .title,
 .auditting-message .title a,
 .auditting-message .words {
