--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -309,6 +309,7 @@ body .narrow-mainborder {
 	vertical-align: bottom;
 	margin:0 4px 2px 0;
 	font-weight:normal;
+	color:#555;
 
 	position: relative;
 	padding: 0 4px 0 28px;
